--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <script type="module" src="./index.js"></script>
 </head>
 <body>
-
-<label for="favcolor">Select your favorite color:</label>
-<input type="color" id="favcolor" value="#ff0000">
+  <div class="panel">
+    <p><label for="primary">Color1:</label>
+<input type="color" id="primary" value="#000000"><br>
+<label for="Color2">Color2:</label>
+<input type="color" id="Color2" value="#000000"></p>
+  </div>
 </body>
