--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Fluid's UCP</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="module" src="./index.js"></script>
-</head>
+
+	<head>
+		<meta charset="utf-8">
+		<title>Fluid's UCP</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script type="module" src="./index.js"></script>
+		<link rel="stylesheet" type="text/css" href="index.css" />
+	</head>
 <body>
-  <div class="panel">
-    <p><label for="primary">Color1:</label>
-<input type="color" id="primary" value="#000000"><br>
-<label for="Color2">Color2:</label>
-<input type="color" id="Color2" value="#000000"></p>
-  </div>
+	<div class="panel">
+		<p><label for="primary">Color1:</label>
+		<input type="color" id="primary" value="#000000"><br>
+		<label for="Color2">Color2:</label>
+		<input type="color" id="Color2" value="#000000"></p>
+	</div>
+	<div class="gradi">
+	</div>
 </body>
